# monocypher-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_and_test.sh  run_tests.sh
.github/workflows/: build-test-ubuntu.yml  build-test.yml
include/: Monocypher+sha256.hh  Monocypher+xsalsa20.hh  Monocypher-ed25519.hh  Monocypher.hh  monocypher.h
include/monocypher/: base.hh  encryption.hh  hash.hh  key_derivation.hh  key_exchange.hh  signatures.hh
include/monocypher/ext/: blake3.hh  ed25519.hh  sha256.hh  sha512.hh  xsalsa20.hh
src/: Monocypher+blake3.cc  Monocypher+sha256.cc  Monocypher+xsalsa20.cc  Monocypher-ed25519.cc  Monocypher.cc
test/: tests.cc  tests.hh
tests/: CaseListReporter.hh  MonocypherCppTests.cc  Test_Blake3.cc  hexString.hh  tests_main.cc
